--- a/Section_4_Numeric_Types.ipynb
+++ b/Section_4_Numeric_Types.ipynb
@@ -6985,18 +6985,18 @@
       "metadata": {
         "id": "X8Ni8aO-QCK8",
         "colab_type": "code",
+        "outputId": "2c233691-56a9-4a75-ff3a-d446407be1de",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "2c233691-56a9-4a75-ff3a-d446407be1de"
+        }
       },
       "source": [
         "a = complex(1, 2)\n",
         "b = 1 + 2j\n",
         "a == b"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7027,16 +7027,16 @@
       "metadata": {
         "id": "P3vdGCi1oPOc",
         "colab_type": "code",
+        "outputId": "3ca4312e-a4ce-4b71-ad7c-b5d8bf7ff9a0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "3ca4312e-a4ce-4b71-ad7c-b5d8bf7ff9a0"
+        }
       },
       "source": [
         "a.real, type(a.real)"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7057,16 +7057,16 @@
       "metadata": {
         "id": "5Vxf_ddToT7D",
         "colab_type": "code",
+        "outputId": "0df2c122-d148-4300-b87b-da9af0ddad88",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "0df2c122-d148-4300-b87b-da9af0ddad88"
+        }
       },
       "source": [
         "a.imag, type(a.imag)"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7097,16 +7097,16 @@
       "metadata": {
         "id": "uJSK_iUwoVpZ",
         "colab_type": "code",
+        "outputId": "0a10955e-336b-4063-fc8f-ea7a51d2247f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "0a10955e-336b-4063-fc8f-ea7a51d2247f"
+        }
       },
       "source": [
         "a.conjugate()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7137,11 +7137,11 @@
       "metadata": {
         "id": "ww4stncAoZVE",
         "colab_type": "code",
+        "outputId": "821dc983-fc1b-442b-f939-8f6fa6f42507",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "821dc983-fc1b-442b-f939-8f6fa6f42507"
+        }
       },
       "source": [
         "a = 1 + 2j\n",
@@ -7150,7 +7150,7 @@
         "d = 10\n",
         "a + b"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7171,16 +7171,16 @@
       "metadata": {
         "id": "NwS74pZWod3v",
         "colab_type": "code",
+        "outputId": "c1ac09d4-1a95-4b6c-c4a1-522023f005de",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "c1ac09d4-1a95-4b6c-c4a1-522023f005de"
+        }
       },
       "source": [
         "b * c"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7201,16 +7201,16 @@
       "metadata": {
         "id": "rHQz9PQ6ofvx",
         "colab_type": "code",
+        "outputId": "143367f2-c908-49e3-ad14-51ec2883e615",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "143367f2-c908-49e3-ad14-51ec2883e615"
+        }
       },
       "source": [
         "c / d"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7231,16 +7231,16 @@
       "metadata": {
         "id": "_66r7jjoohJM",
         "colab_type": "code",
+        "outputId": "746a8077-0def-42b8-b764-a8df105332c9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "746a8077-0def-42b8-b764-a8df105332c9"
+        }
       },
       "source": [
         "d - a"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7271,16 +7271,16 @@
       "metadata": {
         "id": "7GsAuAohoimv",
         "colab_type": "code",
+        "outputId": "f8c75fc6-fdf5-4420-ff85-d284e9d86ff5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 163
-        },
-        "outputId": "f8c75fc6-fdf5-4420-ff85-d284e9d86ff5"
+        }
       },
       "source": [
         "a // b"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -7300,16 +7300,16 @@
       "metadata": {
         "id": "MvJVyM79onQ3",
         "colab_type": "code",
+        "outputId": "fca25e99-3d9a-46ba-ce02-372c861b482a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 163
-        },
-        "outputId": "fca25e99-3d9a-46ba-ce02-372c861b482a"
+        }
       },
       "source": [
         "a % b"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -7339,17 +7339,17 @@
       "metadata": {
         "id": "aJfaN0s8oo0h",
         "colab_type": "code",
+        "outputId": "08a44fb1-db9e-4a2e-8138-cd800c2a20b0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "08a44fb1-db9e-4a2e-8138-cd800c2a20b0"
+        }
       },
       "source": [
         "a = 0.1j\n",
         "a + a + a == 0.3j"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7370,16 +7370,16 @@
       "metadata": {
         "id": "afMCzKp4uUBk",
         "colab_type": "code",
+        "outputId": "5b428555-03ea-46b2-b462-5febcc3eceb4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "5b428555-03ea-46b2-b462-5febcc3eceb4"
+        }
       },
       "source": [
         "format(a.imag, '.25f')"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7400,16 +7400,16 @@
       "metadata": {
         "id": "ALVxhYlFua6w",
         "colab_type": "code",
+        "outputId": "d1eef3ca-9c93-4cd3-cbaa-7127312b27e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "d1eef3ca-9c93-4cd3-cbaa-7127312b27e7"
+        }
       },
       "source": [
         "format((a+a+a).imag, '.25f')"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7430,16 +7430,16 @@
       "metadata": {
         "id": "MbM8Pp-cuqbr",
         "colab_type": "code",
+        "outputId": "cd6aa065-98a0-49aa-97e0-951ca9f9f016",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "cd6aa065-98a0-49aa-97e0-951ca9f9f016"
+        }
       },
       "source": [
         "format((0.3j).imag,'.25f')"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7470,18 +7470,18 @@
       "metadata": {
         "id": "fdXL8s2notXM",
         "colab_type": "code",
+        "outputId": "d2963a9c-9cf9-4161-a891-6022248b5e86",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 197
-        },
-        "outputId": "d2963a9c-9cf9-4161-a891-6022248b5e86"
+        }
       },
       "source": [
         "a = 1 + 1j\n",
         "b = 100 + 100j\n",
         "a < b"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -7524,11 +7524,11 @@
       "metadata": {
         "id": "VQOSpxoPox-H",
         "colab_type": "code",
+        "outputId": "879affb5-6771-495f-a224-1714c214dfb9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "879affb5-6771-495f-a224-1714c214dfb9"
+        }
       },
       "source": [
         "import cmath\n",
@@ -7536,7 +7536,7 @@
         "a = 1 + 5j\n",
         "print(cmath.sqrt(a))"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -7562,17 +7562,17 @@
       "metadata": {
         "id": "dnjXLizLo_uR",
         "colab_type": "code",
+        "outputId": "45b6f0ef-43f9-46e6-e2d7-1b21cd67c1f6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 180
-        },
-        "outputId": "45b6f0ef-43f9-46e6-e2d7-1b21cd67c1f6"
+        }
       },
       "source": [
         "import math\n",
         "print(math.sqrt(a))"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -7615,11 +7615,11 @@
       "metadata": {
         "id": "xXfeyFa5pDWV",
         "colab_type": "code",
+        "outputId": "61ae16d6-6ccc-4582-fddf-b1a87150004f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "61ae16d6-6ccc-4582-fddf-b1a87150004f"
+        }
       },
       "source": [
         "a = 1 + 1j\n",
@@ -7627,7 +7627,7 @@
         "phi = cmath.phase(a)\n",
         "print('{0} = ({1},{2})'.format(a, r, phi))"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -7653,18 +7653,18 @@
       "metadata": {
         "id": "b5T-EOfupRjF",
         "colab_type": "code",
+        "outputId": "5c9a793a-8a13-4d95-d8eb-35a29d2e3c99",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "5c9a793a-8a13-4d95-d8eb-35a29d2e3c99"
+        }
       },
       "source": [
         "r = math.sqrt(2)\n",
         "phi = cmath.pi/4\n",
         "print(cmath.rect(r, phi))"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -7700,17 +7700,17 @@
       "metadata": {
         "id": "CuorPcuVpXq8",
         "colab_type": "code",
+        "outputId": "454c1876-b6e1-41c3-e48a-7d92bd6a8b45",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "454c1876-b6e1-41c3-e48a-7d92bd6a8b45"
+        }
       },
       "source": [
         "RHS = cmath.exp(cmath.pi * 1j) + 1\n",
         "print(RHS)"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -7741,16 +7741,16 @@
       "metadata": {
         "id": "uXg3V_dYpfcC",
         "colab_type": "code",
+        "outputId": "459ee446-00b7-4b4e-9237-1f2df25d31c7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "459ee446-00b7-4b4e-9237-1f2df25d31c7"
+        }
       },
       "source": [
         "cmath.isclose(RHS, 0, abs_tol=0.00001)"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7781,16 +7781,16 @@
       "metadata": {
         "id": "xLT3IGDupnI6",
         "colab_type": "code",
+        "outputId": "6bda1c7e-d0c6-49b7-a00a-c8501f3fbf31",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "6bda1c7e-d0c6-49b7-a00a-c8501f3fbf31"
+        }
       },
       "source": [
         "cmath.isclose(RHS, 0)"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7804,6 +7804,66 @@
           },
           "execution_count": 19
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZncHW8WsUzc4",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 15.BOOLEANS"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BCd68x0s63rm",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1f-TSoF4xKQDLsfX5Ouh_NZ58libDeUVR)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "INTRyV-M68gC",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1kqNyW1TYc-EMw2fIdtt-TvP1DK3APm7x)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Qy2nMqh07CNM",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1XDW4B5Z3RKsgTSKQcnthlfrIDMfhbltY)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AojaEsoo7Jq4",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1tHXQBZehji56ndqSjpCyAZbCjgjZc4he)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vjAWjzKL7QG9",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1uFG7YlgIqgLVhx82oKCyL1NNUjLrGmRD)"
       ]
     },
     {
