--- a/Section_4_Numeric_Types.ipynb
+++ b/Section_4_Numeric_Types.ipynb
@@ -10000,6 +10000,76 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jsRKMA6NEb6x",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 17.BOLEANS: Precedence and Short-Circuiting - Lecture"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fOKefwOpElhP",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1xhn5bJH8MYdRRUdFvAplJhzjgdfB7BIR)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "l2BZClIiE8Dy",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1usU_KKCJTXqWBIFTzjKQp99uzbgHZcDK)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Bca8SlpfE82D",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1q13Usujjs1hdUh9gyOSIPoZuBHs2b0qD)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kT7qutWPE9RY",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1rTSJiT1ba5qOc9fDXF2tjOVFb6PCaoFa)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Shozu67HE9ng",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1uJBODHuPYmFWAUIOWsAWeUFdWeLW_8Zh)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fOLeuiLSE-Gw",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1_GYz_qTjWhtex4dzBsPPBnLf13hI6MO7)"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "IT-mz_3h-DmL",
