--- a/Section_4_Numeric_Types.ipynb
+++ b/Section_4_Numeric_Types.ipynb
@@ -10758,9 +10758,569 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7y2sldQqUite",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Coding Time"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GKfLKpe5Uq5k",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Booleans: Boolean Operators"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4MlbFVYjUtRI",
+        "colab_type": "text"
+      },
+      "source": [
+        "The way the Boolean operators ``and``, ``or`` actually work is a littel different in Python:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "e5jqTxGzUvne",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### or"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jcakiG5kU1VX",
+        "colab_type": "text"
+      },
+      "source": [
+        "``X or Y``: If X is falsy, returns Y, otherwise evaluates and returns X"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "P5OdGZdB4M0e",
+        "id": "XdDoij_QU2Mt",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b1f24d38-1199-4746-fb36-7cbde61ef78b"
+      },
+      "source": [
+        "'' or 'abc'"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'abc'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HdScg05tU3h3",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "eccc8705-9535-454f-f75a-5d5370cdcdef"
+      },
+      "source": [
+        "0 or 100"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "100"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qMKDPmDfU49_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3f312ee3-448f-4085-d1e6-fa008e6fc3b5"
+      },
+      "source": [
+        "[] or [1, 2, 3]"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iG-z1XRYU6Xo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "5e5589f6-5c4c-4975-cda5-f9241e139c71"
+      },
+      "source": [
+        "[1, 2] or [1, 2, 3]"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9yMb8yJnU8_8",
+        "colab_type": "text"
+      },
+      "source": [
+        "You should note that the truth value of ``Y`` is never even considered when evaluating the ``or`` result!\n",
+        "\n",
+        "Only the left operand matters.\n",
+        "\n",
+        "Of course, Y will be evaluated if it is being returned - but its truth value does not affect how the ``or`` is being calculated.\n",
+        "\n",
+        "You probably will notice that this means ``Y`` is not evaluated if ``X`` is returned - short-circuiting!!!\n",
+        "</br>\n",
+        "</br>\n",
+        "We could (almost!) write the ``or`` operator ourselves in this way:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ppxNgtw3U9oX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "7db5f217-73c2-4413-f233-edb9aef3a5e3"
+      },
+      "source": [
+        "def _or(x, y):\n",
+        "    if x:\n",
+        "        return x\n",
+        "    else:\n",
+        "        return y\n",
+        "\n",
+        "print(_or(0, 100) == (0 or 100))\n",
+        "print(_or(None, 'n/a') == (None or 'n/a'))\n",
+        "print(_or('abc', 'n/a') == ('abc' or 'n/a'))"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n",
+            "True\n",
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bVsCh265VM-H",
+        "colab_type": "text"
+      },
+      "source": [
+        "Why did I say almost?\n",
+        "\n",
+        "Unlike the ``or`` operator, our ``_or`` function will always evaluate x and y (they are passed as arguments) - so we do not have short-circuiting!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pz-NsWiMVIx8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "eb071930-1b63-4cd3-9973-66850f1aef1b"
+      },
+      "source": [
+        "1 or 1/0"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uWrfmc1BVPL9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 163
+        },
+        "outputId": "c5721d78-61e3-4332-f8c1-680896645554"
+      },
+      "source": [
+        "_or(1, 1/0)"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ZeroDivisionError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-30-4e97d541341a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0m_or\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BHLVstfwVSnn",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### and"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QjRMyMHeVWZn",
+        "colab_type": "text"
+      },
+      "source": [
+        "`X and Y`: If X is falsy, returns X, otherwise evaluates and returns Y\n",
+        "</br>\n",
+        "</br>\n",
+        "Once again, note that the truth value of Y is never considered when evaluating `and`, and that ``Y`` is only evaluated if it needs to be returned (short-circuiting)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SOnx_8RjVTkw",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "s1 = None\n",
+        "s2 = ''\n",
+        "s3 = 'abc'"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aV44ng9uVd7Z",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "7525726d-2d47-40fb-b622-1ba3b9c6540e"
+      },
+      "source": [
+        "print(s1 and s1[0])\n",
+        "print(s2 and s2[0])\n",
+        "print(s3 and s3[0])"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "None\n",
+            "\n",
+            "a\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9dsWYQ6FVfs7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "adb1300c-0cab-4f63-c43f-5a13728ea061"
+      },
+      "source": [
+        "print((s1 and s1[0]) or '')\n",
+        "print((s2 and s2[0]) or '')\n",
+        "print((s3 and s3[0]) or '')"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "a\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FeAjo-3WVkty",
+        "colab_type": "text"
+      },
+      "source": [
+        "This technique will also work to return any default value if ``s`` is an empty string or None:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YjoMVNiUVszT",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "9250bbef-3766-44c9-da7b-2b9661e276c8"
+      },
+      "source": [
+        "print((s1 and s1[0]) or 'n/a')\n",
+        "print((s2 and s2[0]) or 'n/a')\n",
+        "print((s3 and s3[0]) or 'n/a')"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "n/a\n",
+            "n/a\n",
+            "a\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KRLD72wtVuOB",
+        "colab_type": "text"
+      },
+      "source": [
+        "The ``not`` function"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2omAtJYTVnRE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "04644474-fd4d-4f22-c888-fbede94bf086"
+      },
+      "source": [
+        "not 'abc'"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rcuVAkpSVo6Q",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d5095472-fde3-406f-d9ee-9b07e01a8988"
+      },
+      "source": [
+        "not []"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "enDdPyDsVxbY",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "92d608e8-1535-41c2-ea77-23dbd4525d32"
+      },
+      "source": [
+        "bool(None)"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PfqlqNwHVx2J",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "38d48f49-3fe3-4783-ae0f-b7bd7dd46132"
+      },
+      "source": [
+        "not None"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ciZLbtu0VzDy",
         "colab_type": "code",
         "colab": {}
       },
